@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.376 2003-02-24 18:13:55 castaglia Exp $
+$Id: NEWS,v 1.377 2003-02-24 18:39:51 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -32,6 +32,9 @@ CVS
 - Bug 1966 - SCO OpenServer 5.0.5 and inetd.
 - Bug 1953 - STAT -R does not work.  There were some variable initialization
   issues in the handling of options for the STAT command.
+- Bug 1970 - Transfer time wraps around and causes problems with transfer
+  speed calculation.  This was a reporting problem, mostly.  An internal
+  variable was storing time in microseconds; now using milliseconds.
 
 1.2.8rc2 - Released 29-Jan-2003
 ---------------------------------
